sbuild (0.57.5-1) unstable; urgency=low

  * New release.
  * Sbuild::Build::new: Check if 'DSC' exists rather than 'DSC File' to allow
    the .dsc to be in any directory (Closes: #489794).  Thanks to
    Francois-Denis Gonthier for this patch.

 -- Roger Leigh <rleigh@debian.org>  Mon, 07 Jul 2008 21:59:30 +0100

sbuild (0.57.4-1) unstable; urgency=low

  * New release.
  * debian/control: Update to Standards Version 3.8.0.
  * Use schroot "Session Purged" flag rather than "Session Cloned"
    (Closes: #482804).  Thanks to Timothy G Abbott.
  * Handle version provides correctly, by using "~*=PROVIDED=*=" in place
    of "=*=PROVIDED=*=" as the package version (Closes: #395271).  Thanks
    to Niko Tyni for this patch.
  * Don't include epoch version in directory names (Closes: #482456).
    Thanks to Raphael Hertzog.
  * man/sbuild-setup.7.in: Replace references to buildd.chroot with
    sbuild-createchroot, and adduser with sbuild-adduser (Closes: #483654).
    Thanks to Marc Fargas.
  * Package name, version, build directory and associated information are
    now contained within Sbuild::Build objects.  This allows stripping of
    epoch to construct correct unpack directory location
    (Closes: #482931, #482922).
  * Warnings due to uninitialised variables are no longer reproducible
    (Closes: #449251).

 -- Roger Leigh <rleigh@debian.org>  Sun, 06 Jul 2008 12:21:06 +0100

sbuild (0.57.3-1) unstable; urgency=low

  * New release.
  * --chroot and --arch now work together (Closes: #479714).

 -- Roger Leigh <rleigh@debian.org>  Sun, 11 May 2008 10:49:17 +0100

sbuild (0.57.2-1) unstable; urgency=low

  * debian/copyright: Update copyright holders and copyright information.
  * debian/rules: Run dh_link in binary-indep target to correct symlinks.
  * debian/wanna-build.install: Install manual pages.
  * man/sbuild.1.in:
    - Add missing character, thanks to LI Daobing (Closes: #474487).
    - Document --binNMU (Closes: #466927).