@@ -78,6 +78,10 @@
 # failures) for use in a buildd setup.
 #$sbuild_mode = "user";
 
+# Force APT to accept unauthenticated packages.
+# This is disabled by default: only enable it if you know what you are doing.
+#$apt_allow_unauthenticated = 0;
+
 # APT policy.  1 to enable additional checking of package versions
 # available in the APT cache, or 0 to disable.  0 is the traditional
 # sbuild behaviour; 1 is needed to build from additional repositories
