@@ -4,6 +4,9 @@ sbuild (0.57.5-1) unstable; urgency=low
   * Sbuild::Build::new: Check if 'DSC' exists rather than 'DSC File' to allow
     the .dsc to be in any directory (Closes: #489794).  Thanks to
     Francois-Denis Gonthier for this patch.
+  * $Sbuild::Conf::apt_allow_unauthenticated: New configuration parameter
+    to disable APT package authentication, which is now enabled by default
+    (Closes: #492327).  Thanks to Enrico Zini for this patch.
 
  -- Roger Leigh <rleigh@debian.org>  Mon, 07 Jul 2008 21:59:30 +0100
 
